; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_draw.c_vita2d_draw_line.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_draw.c_vita2d_draw_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float, float, float, i32 }

@_vita2d_context = common dso_local global i32 0, align 4
@_vita2d_colorVertexProgram = common dso_local global i32 0, align 4
@_vita2d_colorFragmentProgram = common dso_local global i32 0, align 4
@_vita2d_colorWvpParam = common dso_local global i32 0, align 4
@_vita2d_ortho_matrix = common dso_local global i32 0, align 4
@SCE_GXM_POLYGON_MODE_LINE = common dso_local global i32 0, align 4
@SCE_GXM_PRIMITIVE_LINES = common dso_local global i32 0, align 4
@SCE_GXM_INDEX_FORMAT_U16 = common dso_local global i32 0, align 4
@SCE_GXM_POLYGON_MODE_TRIANGLE_FILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_draw_line(float %0, float %1, float %2, float %3, i32 %4) #0 {
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_3__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  store float %0, float* %6, align 4
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = call i64 @vita2d_pool_memalign(i32 32, i32 16)
  %15 = inttoptr i64 %14 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %11, align 8
  %16 = call i64 @vita2d_pool_memalign(i32 8, i32 4)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %12, align 8
  %18 = load float, float* %6, align 4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store float %18, float* %21, align 4
  %22 = load float, float* %7, align 4
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  store float %22, float* %25, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i64 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 2
  store float 5.000000e-01, float* %28, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i64 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 3
  store i32 %29, i32* %32, align 4
  %33 = load float, float* %8, align 4
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i64 1
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  store float %33, float* %36, align 4
  %37 = load float, float* %9, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i64 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  store float %37, float* %40, align 4
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i64 1
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 2
  store float 5.000000e-01, float* %43, align 4
  %44 = load i32, i32* %10, align 4
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i64 1
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 3
  store i32 %44, i32* %47, align 4
  %48 = load i32*, i32** %12, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 0
  store i32 0, i32* %49, align 4
  %50 = load i32*, i32** %12, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 1
  store i32 1, i32* %51, align 4
  %52 = load i32, i32* @_vita2d_context, align 4
  %53 = load i32, i32* @_vita2d_colorVertexProgram, align 4
  %54 = call i32 @sceGxmSetVertexProgram(i32 %52, i32 %53)
  %55 = load i32, i32* @_vita2d_context, align 4
  %56 = load i32, i32* @_vita2d_colorFragmentProgram, align 4
  %57 = call i32 @sceGxmSetFragmentProgram(i32 %55, i32 %56)
  %58 = load i32, i32* @_vita2d_context, align 4
  %59 = call i32 @sceGxmReserveVertexDefaultUniformBuffer(i32 %58, i8** %13)
  %60 = load i8*, i8** %13, align 8
  %61 = load i32, i32* @_vita2d_colorWvpParam, align 4
  %62 = load i32, i32* @_vita2d_ortho_matrix, align 4
  %63 = call i32 @sceGxmSetUniformDataF(i8* %60, i32 %61, i32 0, i32 16, i32 %62)
  %64 = load i32, i32* @_vita2d_context, align 4
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %66 = call i32 @sceGxmSetVertexStream(i32 %64, i32 0, %struct.TYPE_3__* %65)
  %67 = load i32, i32* @_vita2d_context, align 4
  %68 = load i32, i32* @SCE_GXM_POLYGON_MODE_LINE, align 4
  %69 = call i32 @sceGxmSetFrontPolygonMode(i32 %67, i32 %68)
  %70 = load i32, i32* @_vita2d_context, align 4
  %71 = load i32, i32* @SCE_GXM_PRIMITIVE_LINES, align 4
  %72 = load i32, i32* @SCE_GXM_INDEX_FORMAT_U16, align 4
  %73 = load i32*, i32** %12, align 8
  %74 = call i32 @sceGxmDraw(i32 %70, i32 %71, i32 %72, i32* %73, i32 2)
  %75 = load i32, i32* @_vita2d_context, align 4
  %76 = load i32, i32* @SCE_GXM_POLYGON_MODE_TRIANGLE_FILL, align 4
  %77 = call i32 @sceGxmSetFrontPolygonMode(i32 %75, i32 %76)
  ret void
}

declare dso_local i64 @vita2d_pool_memalign(i32, i32) #1

declare dso_local i32 @sceGxmSetVertexProgram(i32, i32) #1

declare dso_local i32 @sceGxmSetFragmentProgram(i32, i32) #1

declare dso_local i32 @sceGxmReserveVertexDefaultUniformBuffer(i32, i8**) #1

declare dso_local i32 @sceGxmSetUniformDataF(i8*, i32, i32, i32, i32) #1

declare dso_local i32 @sceGxmSetVertexStream(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @sceGxmSetFrontPolygonMode(i32, i32) #1

declare dso_local i32 @sceGxmDraw(i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
